--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python = "^3.10"
 # jupyter = "^1.0.0"
 # ipykernel = "^5.3.4"
 pandas = "^2.2.3"
+fastapi = "^0.115.11"
+uvicorn = "^0.34.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
