--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -15,10 +15,14 @@ jobs:
     - name: Install poetry
       run: |
         python -m pip install poetry
-        poetry export --with dev --format=requirements.txt --output=requirements.txt
+        poetry install
+    - name: Install safety
+      run: poetry run pip install safety
+    - name: Run safety check
+      run: poetry run safety check --full-report
     - name: set PY
       run: echo "PY=$(python -c 'import hashlib, sys;print(hashlib.sha256(sys.version.encode()+sys.executable.encode()).hexdigest())')" >> $GITHUB_ENV
-    - uses: actions/cache@v1
+    - uses: actions/cache@v3
       with:
         path: ~/.cache/pre-commit
         key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
