--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ fastapi = "^0.115.11"
 uvicorn = "^0.34.0"
 sqlalchemy = "^2.0.38"
 psycopg = "^3.2.5"
+alembic = "^1.15.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
