--- a/frontend/components.json
+++ b/frontend/components.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
-  "rsc": false,
+  "style": "new-york",
+  "rsc": true,
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/index.css",
-    "baseColor": "neutral",
+    "css": "src/app/globals.css",
+    "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
