--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-dotenv = "^1.0.1"
 pre-commit = "^2.20.0"
 pytest = "^7.2.0"
 tox = "^4.4.8"
+notebook = "^7.3.3"
 
 [tool.ruff]
 # Same as Black.
