--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlalchemy = "^2.0.38"
 psycopg = "^3.2.5"
 alembic = "^1.15.1"
 python-dotenv = "^1.0.1"
+beautifulsoup4 = "^4.13.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
