--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pre-commit = "^2.20.0"
 pytest = "^7.2.0"
 tox = "^4.4.8"
 notebook = "^7.3.3"
+playwright = "^1.51.0"
 
 [tool.ruff]
 # Same as Black.
