--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       POSTGRES_DB: ric_db
     ports:
       - 5432:5432
+    volumes:
+      - db-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -22,7 +24,7 @@ services:
       dockerfile: ./backend/Dockerfile
     volumes:
       - .:/backend
-      - poetry-cache:/root/.cache/pypoetry
+      - backend-poetry-cache:/root/.cache/pypoetry
     ports:
       - "5001:5001"
       - "8888:8888" # Expose Jupyter's port - dev mode only
@@ -40,11 +42,13 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend-node-modules:/app/node_modules
     environment:
       - NODE_ENV=development
     depends_on:
       - backend
 
 volumes:
-  poetry-cache:
+  db-data:
+  backend-poetry-cache:
+  frontend-node-modules:
