--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,10 +16,16 @@ jobs:
       run: |
         python -m pip install poetry
         poetry install
-    - name: Install safety
-      run: poetry run pip install safety
-    - name: Run safety check
-      run: poetry run safety check --full-report
+    - name: Install Poetry Export Plugin
+      run: |
+        export PATH="$HOME/.local/bin:$PATH"
+        poetry self add poetry-plugin-export
+    - name: Install pip-audit
+      run: python -m pip install pip-audit
+    - name: Export requirements from poetry
+      run: poetry export -f requirements.txt --without-hashes -o requirements.txt
+    - name: Run pip-audit
+      run: pip-audit -r requirements.txt
     - name: set PY
       run: echo "PY=$(python -c 'import hashlib, sys;print(hashlib.sha256(sys.version.encode()+sys.executable.encode()).hexdigest())')" >> $GITHUB_ENV
     - uses: actions/cache@v3
