--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,20 +1,35 @@
-FROM python:3.10-slim as builder
+FROM python:3.12-slim AS builder
 
-RUN pip install poetry
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential curl libffi-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN curl -sSL https://install.python-poetry.org | python3 - --version 1.7.1 \
+    && ln -s /root/.local/bin/poetry /usr/local/bin/poetry
+
+WORKDIR /backend
+
+COPY ./pyproject.toml ./poetry.lock ./
+
+RUN poetry export -f requirements.txt --without-hashes --output requirements.txt
+
+COPY . .
+
+FROM python:3.12-slim
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY poetry.lock pyproject.toml ./
-COPY backend ./backend
 
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+COPY --from=builder /backend/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
-FROM python:3.10-slim
-
-WORKDIR /app
-COPY --from=builder /app .
-COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
+COPY --from=builder /backend/backend ./backend
+COPY --from=builder /backend/database ./database
+COPY --from=builder /backend/pyproject.toml ./pyproject.toml
+COPY --from=builder /backend/poetry.lock ./poetry.lock
 
 EXPOSE 5001
 
-CMD ["poetry", "run", "uvicorn", "backend.main:backend", "--host", "0.0.0.0", "--port", "5001"]
+CMD ["python", "-m", "uvicorn", "backend.main:backend", "--host", "0.0.0.0", "--port", "5001"]
