--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ beautifulsoup4 = "^4.13.3"
 openpyxl = "^3.1.5"
 tqdm = "^4.67.1"
 h11 = "^0.16.0"
+gender-guesser = "^0.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
