--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ tqdm = "^4.67.1"
 h11 = "^0.16.0"
 gender-guesser = "^0.4.0"
 dateparser = "^1.2.1"
+pyjwt = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
