task(docker-compose): updating docker compose file

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,36 +1,24 @@
 services:
-  db:
-    image: postgres:15.12-alpine
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-ric_db}
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U", postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - web
-
   backend:
+    restart: unless-stopped
     image: ${DOCKERHUB_USERNAME:-nicorvl}/ric-backend:latest
     expose:
-      - 5001
+      - ${BACKEND_PORT}
     environment:
-      - DATABASE_URL=postgresql+psycopg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-ric_db}
-    depends_on:
-      db:
-        condition: service_healthy
+      - DATABASE_URL=${DATABASE_URL}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+      - PORT=${BACKEND_PORT}
     networks:
       - web
 
   frontend:
+    restart: unless-stopped
     image: ${DOCKERHUB_USERNAME:-nicorvl}/ric-frontend:latest
     expose:
-      - 80
+      - ${FRONTEND_PORT}
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
     depends_on:
       - backend
     networks:
