--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -2,12 +2,27 @@ server {
     listen 80;
     server_name api.ric-cinema.fr www.api.ric-cinema.fr ric-cinema.fr www.ric-cinema.fr;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name api.ric-cinema.fr;
+    server_name api.ric-cinema.fr www.api.ric-cinema.fr;
+
+    ssl_certificate /etc/letsencrypt/live/api.ric-cinema.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.ric-cinema.fr/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
 
     location / {
         proxy_pass http://backend:5001;
@@ -15,6 +30,9 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
 }
@@ -23,12 +41,33 @@ server {
     listen 443 ssl;
     server_name ric-cinema.fr www.ric-cinema.fr;
 
+    ssl_certificate /etc/letsencrypt/live/ric-cinema.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ric-cinema.fr/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        proxy_pass http://frontend:80;
+        proxy_set_header Host $host;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+    }
+
     location / {
         proxy_pass http://frontend:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
 }
