--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
           file: ./backend/Dockerfile.prod
           push: true
           tags: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_BACKEND }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v4
@@ -59,6 +60,7 @@ jobs:
           file: ./frontend/Dockerfile.prod
           push: true
           tags: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Create application directory
         uses: appleboy/ssh-action@v1
