--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,10 +79,10 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /opt/ric
-            export ALLOWED_ORIGINS=${{ env.ALLOWED_ORIGINS }}
-            export BACKEND_PORT=${{ env.BACKEND_PORT }}
-            export FRONTEND_PORT=${{ env.FRONTEND_PORT }}
-            export NEXT_PUBLIC_API_URL=${{ env.NEXT_PUBLIC_API_URL }}
+            export ALLOWED_ORIGINS=${{ vars.ALLOWED_ORIGINS }}
+            export BACKEND_PORT=${{ vars.BACKEND_PORT }}
+            export FRONTEND_PORT=${{ vars.FRONTEND_PORT }}
+            export NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
             export DATABASE_URL=${{ secrets.DATABASE_URL }}
             export DOCKERHUB_USERNAME=${{ env.REGISTRY }}/${{ github.repository }}
             echo ${{secrets.D4GTECH_TOKEN}} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
