--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name api.ric-cinema.fr www.api.ric-cinema.fr ric-cinema.fr www.ric-cinema.fr;
+    server_name toolbox.association.com api-toolbox.association.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -11,10 +11,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api.ric-cinema.fr www.api.ric-cinema.fr;
+    server_name api-toolbox.association.com;
 
-    ssl_certificate /etc/letsencrypt/live/api.ric-cinema.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.ric-cinema.fr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api-toolbox.association.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api-toolbox.association.com/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -39,10 +39,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name ric-cinema.fr www.ric-cinema.fr;
+    server_name toolbox.association.com;
 
-    ssl_certificate /etc/letsencrypt/live/ric-cinema.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ric-cinema.fr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/toolbox.association.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/toolbox.association.com/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -53,14 +53,14 @@ server {
     add_header X-Frame-Options DENY;
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
 
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
