--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name toolbox.association.com api-toolbox.association.com;
+    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -11,10 +11,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api-toolbox.association.com;
+    server_name api-toolbox.collectif5050.com;
 
-    ssl_certificate /etc/letsencrypt/live/api-toolbox.association.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api-toolbox.association.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api-toolbox.collectif5050.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api-toolbox.collectif5050.com/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -39,10 +39,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name toolbox.association.com;
+    server_name toolbox.collectif5050.com;
 
-    ssl_certificate /etc/letsencrypt/live/toolbox.association.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/toolbox.association.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
