fix (nginx/prod.conf): use only certificate and use port 80 for frontend

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,20 +1,22 @@
 server {
     listen 80;
-    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com;
+    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com www.toolbox.collectif5050.com www.api-toolbox.collectif5050.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
     listen 443 ssl;
     server_name api-toolbox.collectif5050.com;
 
-    ssl_certificate /etc/letsencrypt/live/api-toolbox.collectif5050.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api-toolbox.collectif5050.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -53,14 +55,14 @@ server {
     add_header X-Frame-Options DENY;
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://frontend:80;
         proxy_set_header Host $host;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
 
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://frontend:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
