--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -8,6 +8,9 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
       - PORT=${BACKEND_PORT}
+      - METADATA_URL=${METADATA_URL}
+      - METABASE_SECRET_KEY=${METABASE_SECRET_KEY}
+      - METABASE_DASHBOARD_ID=${METABASE_DASHBOARD_ID}
     networks:
       - web
 
