fix(nginx): ajoute www aux server_name pour l'API et le frontend (HTTPS) afin de corriger la redirection sur les sous-domaines www

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -13,7 +13,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api-toolbox.collectif5050.com;
+    server_name api-toolbox.collectif5050.com www.api-toolbox.collectif5050.com;
 
     ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
@@ -41,7 +41,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name toolbox.collectif5050.com;
+    server_name toolbox.collectif5050.com www.toolbox.collectif5050.com;
 
     ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
