added new hyperparameters tuning, use clustering for poster predictions

--- a/ml-image/.gitignore
+++ b/ml-image/.gitignore
@@ -1,6 +1,10 @@
 models/*
 example/*
-grid_search_generator.py
-grid_search.json
 gridsearch.py
 scripts/evaluation_trailers/*
+stored_predictions/*
+stored_videos/*
+visualize_parameters/*
+inference_records/*
+predictions_on_posters.csv
+predictions_on_trailers.csv
