Fix permissions for packages in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
     permissions:
       contents: read
-      packages: write_package
+      packages: write
       attestations: write
       id-token: write
 
