task : masking festivals data

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,16 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "sharp"
-    ]
+    ],
+    "overrides": {
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "@eslint/plugin-kit@<0.3.4": ">=0.3.4",
+      "next@>=15.0.0 <=15.4.4": ">=15.4.5",
+      "next@>=15.0.0-canary.0 <15.4.7": ">=15.4.7",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "next@>=15.2.0-canary.0 <15.2.6": ">=15.2.6"
+    }
   },
   "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c"
 }
