--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,24 +6,45 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME_BACKEND: ric-backend
-  IMAGE_NAME_FRONTEND: ric-frontend
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-
     environment: production
-
     permissions:
       contents: read
       packages: write
       attestations: write
       id-token: write
 
+    strategy:
+      matrix:
+        include:
+          - name: backend
+            image: ric-backend
+            context: .
+            file: ./backend/Dockerfile.prod
+          - name: frontend
+            image: ric-frontend
+            context: ./frontend
+            file: ./frontend/Dockerfile.prod
+            build-args: |
+              NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
+          - name: nginx
+            image: ric-nginx
+            context: ./nginx
+            file: ./nginx/Dockerfile
+          - name: certbot
+            image: ric-certbot
+            context: ./certbot
+            file: ./certbot/Dockerfile
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -32,33 +53,30 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata (tags, labels) for ${{ matrix.name }}
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_BACKEND }}
-            ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_FRONTEND }}
+          images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ matrix.image }}
 
-      - name: Build and push Backend
-        uses: docker/build-push-action@v4
+      - name: Build and push ${{ matrix.name }}
+        uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./backend/Dockerfile.prod
+          context: ${{ matrix.context }}
+          file: ${{ matrix.file }}
           push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_BACKEND }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: ${{ matrix.build-args || '' }}
 
-      - name: Build and push Frontend
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile.prod
-          push: true
-          build-args: |
-            NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    environment: production
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Copy docker compose prod file via SSH
         uses: appleboy/scp-action@v1
@@ -69,13 +87,22 @@ jobs:
           source: "docker-compose.prod.yaml"
           target: "/opt/ric"
 
-      - name: Copy nginx prod file via SSH
+      - name: Copy nginx config via SSH
         uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "nginx"
+          target: "/opt/ric"
+
+      - name: Copy certbot scaffolding via SSH
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "certbot"
           target: "/opt/ric"
 
       - name: Deploy application via SSH
@@ -86,6 +113,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /opt/ric
+            mkdir -p certbot/conf certbot/www certbot/logs
             echo "ALLOWED_ORIGINS=${{ vars.ALLOWED_ORIGINS }}" > .env
             echo "BACKEND_PORT=${{ vars.BACKEND_PORT }}" >> .env
             echo "FRONTEND_PORT=${{ vars.FRONTEND_PORT }}" >> .env
@@ -96,8 +124,8 @@ jobs:
             echo "METABASE_SECRET_KEY=${{ secrets.METABASE_SECRET_KEY }}" >> .env
             echo "METABASE_DASHBOARD_ID=${{ secrets.METABASE_DASHBOARD_ID }}" >> .env
 
-            echo ${{ secrets.D4GTECH_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+            echo ${{ github.token }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
             mv docker-compose.prod.yaml docker-compose.yml
             docker compose pull
             docker compose down
-            docker compose up -d --build --remove-orphans
+            docker compose up -d --remove-orphans
