--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,22 +1,30 @@
+map $host $redirect_host {
+    api-toolbox.collectif5050.com api.cinestats5050.fr;
+    www.api-toolbox.collectif5050.com api.cinestats5050.fr;
+    toolbox.collectif5050.com cinestats5050.fr;
+    www.toolbox.collectif5050.com cinestats5050.fr;
+    default $host;
+}
+
 server {
     listen 80;
-    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com www.toolbox.collectif5050.com www.api-toolbox.collectif5050.com;
+    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com www.toolbox.collectif5050.com www.api-toolbox.collectif5050.com cinestats5050.fr www.cinestats5050.fr api.cinestats5050.fr www.api.cinestats5050.fr;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$redirect_host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name api-toolbox.collectif5050.com www.api-toolbox.collectif5050.com;
+    server_name api.cinestats5050.fr www.api.cinestats5050.fr;
 
-    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/cinestats5050.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cinestats5050.fr/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -41,10 +49,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name toolbox.collectif5050.com www.toolbox.collectif5050.com;
+    server_name cinestats5050.fr www.cinestats5050.fr;
 
-    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/cinestats5050.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cinestats5050.fr/privkey.pem;
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -71,5 +79,45 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name api-toolbox.collectif5050.com www.api-toolbox.collectif5050.com;
+
+    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+
+    location / {
+        return 301 https://api.cinestats5050.fr$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name toolbox.collectif5050.com www.toolbox.collectif5050.com;
+
+    ssl_certificate /etc/letsencrypt/live/toolbox.collectif5050.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/toolbox.collectif5050.com/privkey.pem;
+    
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+
+    location / {
+        return 301 https://cinestats5050.fr$request_uri;
     }
 }
