--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,6 +105,19 @@ jobs:
               exit 1
             fi
 
+      - name: Ensure remote target directory is writable
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            set -e
+            sudo chown -R $USER /opt/ric
+            sudo find /opt/ric -type d -exec chmod u+rwx {} +
+            sudo find /opt/ric -type f -exec chmod u+rw {} +
+            echo "/opt/ric ownership set to $USER"
+
       - name: Copy docker compose prod file via SSH
         uses: appleboy/scp-action@v1
         with:
