Modify frontend build args for dynamic API URL
Updated frontend build arguments to use dynamic API URL.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,6 @@ jobs:
             image: ric-frontend
             context: ./frontend
             file: ./frontend/Dockerfile.prod
-            build-args: |
-              NEXT_PUBLIC_API_URL=https://api.cinestats5050.fr
           - name: nginx
             image: ric-nginx
             context: ./nginx
@@ -70,7 +68,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: ${{ matrix.build-args || '' }}
+          build-args: |
+            ${{ matrix.name == 'frontend' && format('NEXT_PUBLIC_API_URL={0}', vars.NEXT_PUBLIC_API_URL) || '' }}
 
   deploy:
     runs-on: ubuntu-latest
